[package]
name = "minicbor-c"
version = "0.0.7"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["staticlib", "lib"]

[dependencies]
minicbor = { version = "0.18", git = "https://www.gitlab.com/twittner/minicbor", branch = "cbor_len", default-features = false}

[build-dependencies]
cbindgen = "0.24"
